Fix #169 - ProGit code blocks aren't clipped

--- a/app/assets/stylesheets/book.css.scss
+++ b/app/assets/stylesheets/book.css.scss
@@ -149,6 +149,7 @@ ol.book-toc {
 
 .book pre code {
   display: block;
+  overflow: auto;
 }
 
 .book table.commands {
